--- a/web.xml
+++ b/web.xml
@@ -13,7 +13,7 @@
 
     <servlet-name>UploadHandlerServlet</servlet-name>
 
-    <servlet-class>assignment.UploadHandlerServlet</servlet-class>
+    <servlet-class>Servlets.UploadHandlerServlet</servlet-class>
 
   </servlet>
 
@@ -21,7 +21,15 @@
 
     <servlet-name>LoginServlet</servlet-name>
 
-    <servlet-class>assignment.LoginServlet</servlet-class>
+    <servlet-class>Servlets.LoginServlet</servlet-class>
+
+  </servlet>
+  
+  <servlet>
+
+    <servlet-name>MigrationServlet</servlet-name>
+
+    <servlet-class>Servlets.MigrationServlet</servlet-class>
 
   </servlet>
 
@@ -39,6 +47,14 @@
     <servlet-name>LoginServlet</servlet-name>
 
     <url-pattern>/LoginServlet</url-pattern>
+
+  </servlet-mapping>
+  
+  <servlet-mapping>
+
+    <servlet-name>MigrationServlet</servlet-name>
+
+    <url-pattern>/MigrationServlet</url-pattern>
 
   </servlet-mapping>
 
